Adding malicious-client, resource server and some updates on client-application and auth-server after testing