@@ -2,6 +2,10 @@ plugins {
     id 'java'
 }
 
+bootJar {
+    mainClass = 'edu.sde.clientapplication.ClientApplication'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -9,8 +13,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // PKCE utility
-    implementation 'com.nimbusds:oauth2-oidc-sdk:11.10.1'
+    runtimeOnly 'org.postgresql:postgresql'
+
+    // Shared security module
+    implementation project(':shared-security')
 
     // Web utilities
     implementation 'org.webjars:bootstrap:5.3.2'
@@ -24,15 +30,6 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    // Testing
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-
-    implementation project(':shared-security')
-
 }
 
-bootRun {
-    jvmArgs = ['--enable-preview']
-}
+// Remove individual bootRun configuration since it's in root build.gradle
